# IDS6938-SimulationTechniques

./: .gitmodules  README.md
Agent1/: CMakeLists.txt
Agent1/LIBS/: tinyxmld_STL.lib
Agent1/src/: conway.cpp  conway.h  drawing.h  globals.h  main.cpp
Discrete1/: CMakeLists.txt  birthday.cpp  coin.cpp  random.cpp
Discrete2/: CMakeLists.txt  dice.cpp  quasi.cpp  random.cpp  sobol.hpp
Discrete3/: CMakeLists.txt  main.cpp  main_ctmc.cpp  markov.cpp
Homework1/: Readme.md
Homework1/jellocube-basecode/: CMakeLists.txt
Homework1/jellocube-basecode/LIBS/: tinyxml_STL.lib
Homework1/jellocube-basecode/output/: make_me_a_movie.bat  readme.md
Homework1/jellocube-basecode/src/: camera.cpp  camera.h  jelloMesh.cpp  jelloMesh.h  main.cpp  matrix.h  thanks.txt  vec.h  world.cpp
Homework1/jellocube-basecode/worlds/: readme.md
Homework2/: Readme.md
Homework2/Anylogic Airport - Part 3 V7/: Airport - Part 3 V7.alp
Homework2/Anylogic Airport - Part 3 V7/Airport - Part 3 V8/: Airport - Part 3 V8.alp
Homework2/Anylogic Airport - Part 3 V7/Airport - Part 3 V8/x3d/: controller_1.x3d
Homework2/Anylogic Airport - Part 3 V7/x3d/: airliner.x3d
Homework2/RFI Military Model/: RFI Military Model.alp
Homework2/RFI Military Model/x3d/: boxcar.x3d  cart2.x3d  container40.x3d  pallet_trolley_2.x3d  pallettrolley.x3d  soldier.x3d  trolley_2.x3d
Homework2/SnakesAndLadders/: CMakeLists.txt  TransitionMatrix.h  markov.cpp  markov.h  test_dtmc.cpp  test_markov.cpp
Homework2/images/: Excel Histo Data Graphs.xlsx
Homework2/queues/: CMakeLists.txt  customer.h  main.cpp  mm1_queue.cpp  mm1_queue.h  random_number_generator.h
Homework3/: Readme.md
Homework3/BehaviorSimFramework/: Behavior.rc  CMakeLists.txt
Homework3/BehaviorSimFramework/res/: Behavior.rc2
Homework3/BehaviorSimFramework/src/: Agent.cpp  Agent.h  AgentDisplay.cpp  AgentDisplay.h  Behavior.cpp  Behavior.h  BehaviorDoc.cpp  BehaviorDoc.h  BehaviorView.cpp  BehaviorView.h  Camera.cpp  Camera.h  Environment.cpp  Environment.h  MainFrm.cpp  MainFrm.h  Panel.cpp  Panel.h  Simulation.cpp  Simulation.h  StdAfx.cpp  StdAfx.h  Transformation.cpp  Transformation.h  resource.h
Homework3/Homework 3 - Maze V2/: Homework 3 - Maze V2.alp
Homework3/Homework 3 - Part 3 UCF Building/: Homework 3 - Part 3 UCF Building.alp
Homework3/Homework 3 - Part 3 UCF Building V2/: Homework 3 - Part 3 UCF Building V2.alp
Lecture3/: main.cpp
Lecture3/geometry/: CMakeLists.txt  vec3f.cpp  vec3f.h
Lecture5/: main.cpp
Lecture5-Solution/: main.cpp
Lecture6/: main.cpp
Lecture6-Solution/: main.cpp
Lecture9/: CMakeLists.txt  helper.hpp  main.cpp
Lecture9-Solution/: SimulationEngine.cpp  helper.hpp
Lecture9/geometry/: CMakeLists.txt  Geometry.cpp  Geometry.h  Scene.cpp  Scene.h  particlesystem.cpp  particlesystem.h
Lecture9/simulationengine/: CMakeLists.txt  SimulationEngine.cpp  SimulationEngine.h
Lecture9/visualizer/: AxisLines.cpp  AxisLines.h  CMakeLists.txt  FullScreenQuad.cpp  FullScreenQuad.h  GridLines.cpp  GridLines.h  Points.cpp  Points.h  ShaderSourceCode.h  Visualizer.cpp  Visualizer.h  helper.hpp  mesh.cpp  mesh.h  theCamera.cpp  theCamera.h
